# rs-wikibzip2pages

./: Cargo.toml  README.md  doc-web.sh
examples/cli/wikibzip2pages/: Cargo.toml  example.sh  wikibzip2pages
examples/cli/wikibzip2pages/src/: main.rs
src/: lib.rs
